<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HaveTodo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="tasks">Tasks</string>
    <string name="logout">Log out</string>

    <string name="NoTask">No Task</string> 

    <string name="CheckBoxImage">Check Box Image</string>

    <string name="AddTask">Add Task</string> 
    <string name="RefreshTasks">Refresh Tasks</string> 

    <string name="task_hint">Task Name</string> 
    
</resources>
