<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >
    
    <EditText 
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/name" />
    
    <EditText 
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_name"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    
    <EditText 
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText 
        android:id="@+id/reg_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword" />
    
    <Button 
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password_confirmation"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/register"
        android:onClick="onRegistrationButtonClick" />
    
</RelativeLayout>
