<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button 
        android:id="@+id/main_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/register"
        android:onClick="onRegisterButtonClick" />
    
    <Button 
        android:id="@+id/main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_register"
        android:gravity="center"
        android:text="@string/login"
        android:onClick="onLoginButtonClick" />

    <Button 
        android:id="@+id/main_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_login"
        android:gravity="center"
        android:text="@string/logout"
        android:onClick="onLogoutButtonClick" />

    <Button 
        android:id="@+id/main_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_logout"
        android:gravity="center"
        android:text="@string/tasks"
        android:onClick="onTasksButtonClick" />

    <Button 
        android:id="@+id/main_tasks_cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_tasks"
        android:gravity="center"
        android:text="@string/tasks"
        android:onClick="onTasksCursorButtonClick" />
    
</RelativeLayout>
